{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 36,
  "lineage": "ed06438b-9afb-6df9-da0a-472eaf77f9d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6e5f0632b881518",
            "association_id": "eipassoc-07c986559030356ba",
            "domain": "vpc",
            "id": "eipalloc-0d6e5f0632b881518",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05075c3db8db8c677",
            "private_dns": "ip-10-202-1-98.ap-south-1.compute.internal",
            "private_ip": "10.202.1.98",
            "public_dns": "ec2-43-204-247-35.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.247.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prd_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b34902677896d579",
            "association_id": "eipassoc-051b664da69a330e1",
            "domain": "vpc",
            "id": "eipalloc-0b34902677896d579",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-009b99b5125837411",
            "private_dns": "ip-10-200-1-38.ap-south-1.compute.internal",
            "private_ip": "10.200.1.38",
            "public_dns": "ec2-3-7-49-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.49.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "stg_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0389ceac1920c7fc3",
            "association_id": "eipassoc-06b1b308d67e19252",
            "domain": "vpc",
            "id": "eipalloc-0389ceac1920c7fc3",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01ded3244232fed19",
            "private_dns": "ip-10-201-1-102.ap-south-1.compute.internal",
            "private_ip": "10.201.1.102",
            "public_dns": "ec2-3-111-127-91.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.127.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "STG NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "STG NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:internet-gateway/igw-0fa6bd01a11c094c1",
            "id": "igw-0fa6bd01a11c094c1",
            "owner_id": "320085357126",
            "tags": {
              "Name": "DEV IGW"
            },
            "tags_all": {
              "Name": "DEV IGW"
            },
            "vpc_id": "vpc-071155d38d3c8d47d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:internet-gateway/igw-0dca285144c98dadb",
            "id": "igw-0dca285144c98dadb",
            "owner_id": "320085357126",
            "tags": {
              "Name": "PRD IGW"
            },
            "tags_all": {
              "Name": "PRD IGW"
            },
            "vpc_id": "vpc-0d9944e79ea92ae7e"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stg_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:internet-gateway/igw-0717a0e78f7a48fe2",
            "id": "igw-0717a0e78f7a48fe2",
            "owner_id": "320085357126",
            "tags": {
              "Name": "STG IGW"
            },
            "tags_all": {
              "Name": "STG IGW"
            },
            "vpc_id": "vpc-05649377c21c6f185"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6e5f0632b881518",
            "connectivity_type": "public",
            "id": "nat-0321bb62e432445dd",
            "network_interface_id": "eni-05075c3db8db8c677",
            "private_ip": "10.202.1.98",
            "public_ip": "43.204.247.35",
            "subnet_id": "subnet-0cb6a9be73c1f048d",
            "tags": {
              "Name": "DEV NAT Gateway"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_subnet.dev_publicsubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prd_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b34902677896d579",
            "connectivity_type": "public",
            "id": "nat-0f2620506353d5e00",
            "network_interface_id": "eni-009b99b5125837411",
            "private_ip": "10.200.1.38",
            "public_ip": "3.7.49.149",
            "subnet_id": "subnet-03adab749dfc3393e",
            "tags": {
              "Name": "PRD NAT Gateway"
            },
            "tags_all": {
              "Name": "PRD NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_subnet.prd_publicsubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stg_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0389ceac1920c7fc3",
            "connectivity_type": "public",
            "id": "nat-01b18c8ac61ec2bbc",
            "network_interface_id": "eni-01ded3244232fed19",
            "private_ip": "10.201.1.102",
            "public_ip": "3.111.127.91",
            "subnet_id": "subnet-002a1c3258228aa80",
            "tags": {
              "Name": "STG NAT Gateway"
            },
            "tags_all": {
              "Name": "STG NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-07298f432cdd1bc37",
            "id": "rtb-07298f432cdd1bc37",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0321bb62e432445dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-071155d38d3c8d47d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev",
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_subnet.dev_publicsubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-027f6c7466d5c0fce",
            "id": "rtb-027f6c7466d5c0fce",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa6bd01a11c094c1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-071155d38d3c8d47d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-0e39c5e182e64468f",
            "id": "rtb-0e39c5e182e64468f",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f2620506353d5e00",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9944e79ea92ae7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.prd_NATgw",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd",
            "aws_eip.prd_nateIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-075a41dddac8cf2f4",
            "id": "rtb-075a41dddac8cf2f4",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dca285144c98dadb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9944e79ea92ae7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-0a77345c08a5fc509",
            "id": "rtb-0a77345c08a5fc509",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b18c8ac61ec2bbc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "STG Private Route Table"
            },
            "tags_all": {
              "Name": "STG Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05649377c21c6f185"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-0e2307b514d2a33b7",
            "id": "rtb-0e2307b514d2a33b7",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0717a0e78f7a48fe2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "STG Public Route Table"
            },
            "tags_all": {
              "Name": "STG Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05649377c21c6f185"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abbae9b7d83f6520",
            "route_table_id": "rtb-07298f432cdd1bc37",
            "subnet_id": "subnet-0b5cbee2f79d954d3"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_privatesubnets",
            "aws_subnet.dev_publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0791118fc2fa393e6",
            "route_table_id": "rtb-027f6c7466d5c0fce",
            "subnet_id": "subnet-0cb6a9be73c1f048d"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4dd91933353d9f5",
            "route_table_id": "rtb-0e39c5e182e64468f",
            "subnet_id": "subnet-01ed8bf180ad242c2"
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_route_table.prd_PrivateRT",
            "aws_subnet.prd_privatesubnets",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f4d65fa7172406d",
            "route_table_id": "rtb-075a41dddac8cf2f4",
            "subnet_id": "subnet-03adab749dfc3393e"
          },
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_route_table.prd_PublicRT",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a620626bd5bb8a",
            "route_table_id": "rtb-0a77345c08a5fc509",
            "subnet_id": "subnet-048dc799411a00807"
          },
          "dependencies": [
            "aws_nat_gateway.stg_NATgw",
            "aws_route_table.stg_PrivateRT",
            "aws_subnet.stg_privatesubnets",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg",
            "aws_eip.stg_nateIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c85297dcf067a1",
            "route_table_id": "rtb-0e2307b514d2a33b7",
            "subnet_id": "subnet-002a1c3258228aa80"
          },
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_route_table.stg_PublicRT",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0b5cbee2f79d954d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.202.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5cbee2f79d954d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet"
            },
            "tags_all": {
              "Name": "DEV Private Subnet"
            },
            "vpc_id": "vpc-071155d38d3c8d47d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0cb6a9be73c1f048d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.202.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb6a9be73c1f048d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet"
            },
            "tags_all": {
              "Name": "DEV Public Subnet"
            },
            "vpc_id": "vpc-071155d38d3c8d47d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-01ed8bf180ad242c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.200.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed8bf180ad242c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Private Subnet"
            },
            "tags_all": {
              "Name": "PRD Private Subnet"
            },
            "vpc_id": "vpc-0d9944e79ea92ae7e"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-03adab749dfc3393e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03adab749dfc3393e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Public Subnet"
            },
            "tags_all": {
              "Name": "PRD Public Subnet"
            },
            "vpc_id": "vpc-0d9944e79ea92ae7e"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-048dc799411a00807",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.201.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048dc799411a00807",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Private Subnet"
            },
            "tags_all": {
              "Name": "STG Private Subnet"
            },
            "vpc_id": "vpc-05649377c21c6f185"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-002a1c3258228aa80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.201.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002a1c3258228aa80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Public Subnet"
            },
            "tags_all": {
              "Name": "STG Public Subnet"
            },
            "vpc_id": "vpc-05649377c21c6f185"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:vpc/vpc-071155d38d3c8d47d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.202.0.0/16",
            "default_network_acl_id": "acl-0fe13ee9e07bfa860",
            "default_route_table_id": "rtb-02b8206e83fd71321",
            "default_security_group_id": "sg-05c459d21084d701e",
            "dhcp_options_id": "dopt-a914cbc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071155d38d3c8d47d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b8206e83fd71321",
            "owner_id": "320085357126",
            "tags": {
              "Name": "DEV VPC"
            },
            "tags_all": {
              "Name": "DEV VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:vpc/vpc-0d9944e79ea92ae7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-016d1fc340380132c",
            "default_route_table_id": "rtb-076aa4a4b7ce0813d",
            "default_security_group_id": "sg-0babf54934f9c25d7",
            "dhcp_options_id": "dopt-a914cbc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9944e79ea92ae7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076aa4a4b7ce0813d",
            "owner_id": "320085357126",
            "tags": {
              "Name": "PRD VPC"
            },
            "tags_all": {
              "Name": "PRD VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:vpc/vpc-05649377c21c6f185",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.201.0.0/16",
            "default_network_acl_id": "acl-02998ac1f04767052",
            "default_route_table_id": "rtb-034c00df9e53c7a7b",
            "default_security_group_id": "sg-0b157ee46154450bf",
            "dhcp_options_id": "dopt-a914cbc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05649377c21c6f185",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034c00df9e53c7a7b",
            "owner_id": "320085357126",
            "tags": {
              "Name": "STG VPC"
            },
            "tags_all": {
              "Name": "STG VPC"
            }
          }
        }
      ]
    }
  ]
}